--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/dagger.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/dagger.yml
@@ -35,7 +35,7 @@
 - type: modularPart
   id: BladeIronDagger
   targetSlot: Blade
-  sourcePart: CP14ModularBladeIronDagger
+  sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/metall_dagger.rsi
   modifiers:
   - !type:Inherit
@@ -46,7 +46,7 @@
 - type: modularPart
   id: BladeGoldDagger
   targetSlot: Blade
-  sourcePart: CP14ModularBladeGoldDagger
+  sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/metall_dagger.rsi
   color: "#ffaf47"
   modifiers:
@@ -58,7 +58,7 @@
 - type: modularPart
   id: BladeCopperDagger
   targetSlot: Blade
-  sourcePart: CP14ModularBladeCopperDagger
+  sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/metall_dagger.rsi
   color: "#bd712f"
   modifiers:
@@ -70,7 +70,7 @@
 - type: modularPart
   id: BladeMithrilDagger
   targetSlot: Blade
-  sourcePart: CP14ModularBladeMithrilDagger
+  sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/metall_dagger.rsi
   color: "#45d2a4"
   modifiers:
