--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/spear.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/spear.yml
@@ -40,7 +40,7 @@
 - type: modularPart
   id: BladeIronSpear
   targetSlot: Blade
-  sourcePart: CP14ModularBladeIronSpear
+  sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Blade/Spear/metall_spear.rsi
   modifiers:
   - !type:Inherit
@@ -51,7 +51,7 @@
 - type: modularPart
   id: BladeGoldSpear
   targetSlot: Blade
-  sourcePart: CP14ModularBladeGoldSpear
+  sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Blade/Spear/metall_spear.rsi
   color: "#ffaf47"
   modifiers:
@@ -63,7 +63,7 @@
 - type: modularPart
   id: BladeCopperSpear
   targetSlot: Blade
-  sourcePart: CP14ModularBladeCopperSpear
+  sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Blade/Spear/metall_spear.rsi
   color: "#bd712f"
   modifiers:
@@ -75,7 +75,7 @@
 - type: modularPart
   id: BladeMithrilSpear
   targetSlot: Blade
-  sourcePart: CP14ModularBladeMithrilSpear
+  sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Blade/Spear/metall_spear.rsi
   color: "#45d2a4"
   modifiers:
