--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/sword.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/sword.yml
@@ -36,7 +36,7 @@
 - type: modularPart
   id: BladeIronSword
   targetSlot: Blade
-  sourcePart: CP14ModularBladeIronSword
+  sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Blade/Sword/metall_sword.rsi
   modifiers:
   - !type:Inherit
@@ -47,7 +47,7 @@
 - type: modularPart
   id: BladeGoldSword
   targetSlot: Blade
-  sourcePart: CP14ModularBladeGoldSword
+  sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Blade/Sword/metall_sword.rsi
   color: "#ffaf47"
   modifiers:
@@ -59,7 +59,7 @@
 - type: modularPart
   id: BladeCopperSword
   targetSlot: Blade
-  sourcePart: CP14ModularBladeCopperSword
+  sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Blade/Sword/metall_sword.rsi
   color: "#bd712f"
   modifiers:
@@ -71,7 +71,7 @@
 - type: modularPart
   id: BladeMithrilSword
   targetSlot: Blade
-  sourcePart: CP14ModularBladeMithrilSword
+  sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Blade/Sword/metall_sword.rsi
   color: "#45d2a4"
   modifiers:
