--- a/Resources/Prototypes/_CP14/ModularCraft/Garde/sturdy.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Garde/sturdy.yml
@@ -12,7 +12,7 @@
 - type: modularPart
   id: GardeSturdyIron
   targetSlot: Garde
-  sourcePart: CP14ModularGardeSturdyIron
+  sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sturdy.rsi
   modifiers:
   - !type:Inherit
@@ -22,7 +22,7 @@
 - type: modularPart
   id: GardeSturdyGold
   targetSlot: Garde
-  sourcePart: CP14ModularGardeSturdyGold
+  sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sturdy.rsi
   color: "#ffaf47"
   modifiers:
@@ -33,7 +33,7 @@
 - type: modularPart
   id: GardeSturdyCopper
   targetSlot: Garde
-  sourcePart: CP14ModularGardeSturdyCopper
+  sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sturdy.rsi
   color: "#bd712f"
   modifiers:
@@ -44,7 +44,7 @@
 - type: modularPart
   id: GardeSturdyMithril
   targetSlot: Garde
-  sourcePart: CP14ModularGardeSturdyMithril
+  sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sturdy.rsi
   color: "#45d2a4"
   modifiers:
