--- a/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
@@ -9,6 +9,7 @@
   - !type:KnowledgeRequired
     knowledge: MetallMelting
   result: CP14CopperBar1
+  resultCount: 3
 
 - type: CP14Recipe
   id: CP14IronBar1
