--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/shovel.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/shovel.yml
@@ -32,7 +32,7 @@
 - type: modularPart
   id: BladeIronShovel
   targetSlot: Blade
-  sourcePart: CP14ModularBladeIronShovel
+  sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Blade/Shovel/metall_shovel.rsi
   modifiers:
   - !type:Inherit
@@ -43,7 +43,7 @@
 - type: modularPart
   id: BladeGoldShovel
   targetSlot: Blade
-  sourcePart: CP14ModularBladeGoldShovel
+  sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Blade/Shovel/metall_shovel.rsi
   color: "#ffaf47"
   modifiers:
@@ -55,7 +55,7 @@
 - type: modularPart
   id: BladeCopperShovel
   targetSlot: Blade
-  sourcePart: CP14ModularBladeCopperShovel
+  sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Blade/Shovel/metall_shovel.rsi
   color: "#bd712f"
   modifiers:
@@ -67,7 +67,7 @@
 - type: modularPart
   id: BladeMithrilShovel
   targetSlot: Blade
-  sourcePart: CP14ModularBladeMithrilShovel
+  sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Blade/Shovel/metall_shovel.rsi
   color: "#45d2a4"
   modifiers:
