--- a/Resources/Prototypes/_CP14/ModularCraft/Garde/sharp.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Garde/sharp.yml
@@ -12,7 +12,7 @@
 - type: modularPart
   id: GardeSharpIron
   targetSlot: Garde
-  sourcePart: CP14ModularGardeSharpIron
+  sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sharp.rsi
   modifiers:
   - !type:Inherit
@@ -22,7 +22,7 @@
 - type: modularPart
   id: GardeSharpGold
   targetSlot: Garde
-  sourcePart: CP14ModularGardeSharpGold
+  sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sharp.rsi
   color: "#ffaf47"
   modifiers:
@@ -33,7 +33,7 @@
 - type: modularPart
   id: GardeSharpCopper
   targetSlot: Garde
-  sourcePart: CP14ModularGardeSharpCopper
+  sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sharp.rsi
   color: "#bd712f"
   modifiers:
@@ -44,7 +44,7 @@
 - type: modularPart
   id: GardeSharpMithril
   targetSlot: Garde
-  sourcePart: CP14ModularGardeSharpMithril
+  sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sharp.rsi
   color: "#45d2a4"
   modifiers:
