demiplane loot update

--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
@@ -39,8 +39,8 @@
         - id: CP14SpellScrollPlantGrowth
       - id: CP14EnergyCrystalSmallEmpty
       - id: CP14BaseSharpeningStone
-      - id: CP14GlassShard
-      - id: CP14Paper
+      - id: CP14ScrapCopper
+      - id: CP14ScrapIron
     # Rare
     - !type:GroupSelector
       weight: 25
@@ -54,10 +54,6 @@
         - id: CP14VialSmallBlueAmanita
         - id: CP14VialTinyChromiumSlime
         - id: CP14VialTinyLumiMushroom
-      - !type:GroupSelector
-        children:
-        - id: CP14BookKnowledgeClothingSewing
-        - id: CP14BookKnowledgeWallpaperCraft
       - id: CP14BaseLockpick
       - id: CP14EnergyCrystalMediumEmpty
       - id: CP14DemiplaneKeyT1
@@ -96,20 +92,17 @@
       # T1 loot chance
       - !type:NestedSelector
         tableId: CP14TableDemiplaneLootT1
-        weight: 0.25
+        weight: 2 #Temp (small amount T2 loot)
       - !type:GroupSelector
         children:
         - id: CP14SpellScrollShadowStep
         - id: CP14SpellScrollFireball
         - id: CP14SpellScrollBeerCreation
           weight: 0.2
-      - !type:GroupSelector
-        children:
-        - id: CP14BookKnowledgeAdvancedClothingSewing
-        - id: CP14BookKnowledgeMetallMelting
-        - id: CP14BookKnowledgeMetallForging
-        - id: CP14BookKnowledgeGlasswork
       - id: CP14EnergyCrystalMediumEmpty
+      - id: CP14ScrapGold
+      - id: CP14ScrapMithril
+        weight: 0.5
     # Rare
     - !type:GroupSelector
       weight: 25
