--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/dagger.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/dagger.yml
@@ -23,6 +23,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeIronDagger
+  - type: CP14Material
+    materials:
+      CP14Iron: 10
 
 - type: entity
   parent: CP14ModularBladeDaggerBase
@@ -37,6 +40,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeGoldDagger
+  - type: CP14Material
+    materials:
+      CP14Gold: 10
 
 - type: entity
   parent: CP14ModularBladeDaggerBase
@@ -51,6 +57,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeCopperDagger
+  - type: CP14Material
+    materials:
+      CP14Copper: 10
 
 - type: entity
   parent: CP14ModularBladeDaggerBase
@@ -65,3 +74,6 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeMithrilDagger
+  - type: CP14Material
+    materials:
+      CP14Mithril: 10
