--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/pickaxe.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/pickaxe.yml
@@ -23,6 +23,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeIronPickaxe
+  - type: CP14Material
+    materials:
+      CP14Iron: 10
 
 - type: entity
   parent: CP14ModularBladePickaxeBase
@@ -37,6 +40,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeGoldPickaxe
+  - type: CP14Material
+    materials:
+      CP14Gold: 10
 
 - type: entity
   parent: CP14ModularBladePickaxeBase
@@ -51,6 +57,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeCopperPickaxe
+  - type: CP14Material
+    materials:
+      CP14Copper: 10
 
 - type: entity
   parent: CP14ModularBladePickaxeBase
@@ -65,3 +74,6 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeMithrilPickaxe
+  - type: CP14Material
+    materials:
+      CP14Mithril: 10
