--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/shovel.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/shovel.yml
@@ -23,6 +23,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeIronShovel
+  - type: CP14Material
+    materials:
+      CP14Iron: 10
 
 - type: entity
   parent: CP14ModularBladeShovelBase
@@ -37,6 +40,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeGoldShovel
+  - type: CP14Material
+    materials:
+      CP14Gold: 10
 
 - type: entity
   parent: CP14ModularBladeShovelBase
@@ -51,6 +57,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeCopperShovel
+  - type: CP14Material
+    materials:
+      CP14Copper: 10
 
 - type: entity
   parent: CP14ModularBladeShovelBase
@@ -65,3 +74,6 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeMithrilShovel
+  - type: CP14Material
+    materials:
+      CP14Mithril: 10
