--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/sickle.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/sickle.yml
@@ -23,6 +23,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeIronSickle
+  - type: CP14Material
+    materials:
+      CP14Iron: 10
 
 - type: entity
   parent: CP14ModularBladeSickleBase
@@ -37,6 +40,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeCopperSickle
+  - type: CP14Material
+    materials:
+      CP14Gold: 10
 
 - type: entity
   parent: CP14ModularBladeSickleBase
@@ -51,6 +57,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeGoldSickle
+  - type: CP14Material
+    materials:
+      CP14Copper: 10
 
 - type: entity
   parent: CP14ModularBladeSickleBase
@@ -65,3 +74,6 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeMithrilSickle
+  - type: CP14Material
+    materials:
+      CP14Mithril: 10
