--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/spear.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/spear.yml
@@ -24,6 +24,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeIronSpear
+  - type: CP14Material
+    materials:
+      CP14Iron: 10
 
 - type: entity
   parent: CP14ModularBladeSpearBase
@@ -39,6 +42,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeGoldSpear
+  - type: CP14Material
+    materials:
+      CP14Gold: 10
 
 - type: entity
   parent: CP14ModularBladeSpearBase
@@ -54,6 +60,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeCopperSpear
+  - type: CP14Material
+    materials:
+      CP14Copper: 10
 
 - type: entity
   parent: CP14ModularBladeSpearBase
@@ -69,3 +78,6 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeMithrilSpear
+  - type: CP14Material
+    materials:
+      CP14Mithril: 10
