--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/sword.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/sword.yml
@@ -22,6 +22,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeIronSword
+  - type: CP14Material
+    materials:
+      CP14Iron: 10
 
 - type: entity
   parent: CP14ModularBladeSwordBase
@@ -36,6 +39,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeGoldSword
+  - type: CP14Material
+    materials:
+      CP14Gold: 10
 
 - type: entity
   parent: CP14ModularBladeSwordBase
@@ -50,6 +56,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeCopperSword
+  - type: CP14Material
+    materials:
+      CP14Copper: 10
 
 - type: entity
   parent: CP14ModularBladeSwordBase
@@ -64,6 +73,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeMithrilSword
+  - type: CP14Material
+    materials:
+      CP14Mithril: 10
 
 - type: entity
   parent: CP14ModularBladeSwordBase
