--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Garde/sharp.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Garde/sharp.yml
@@ -24,6 +24,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - GardeSharpIron
+  - type: CP14Material
+    materials:
+      CP14Iron: 10
 
 - type: entity
   parent: CP14ModularGardeBase
@@ -39,6 +42,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - GardeSharpGold
+  - type: CP14Material
+    materials:
+      CP14Gold: 10
 
 - type: entity
   parent: CP14ModularGardeBase
@@ -54,6 +60,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - GardeSharpCopper
+  - type: CP14Material
+    materials:
+      CP14Copper: 10
 
 - type: entity
   parent: CP14ModularGardeBase
@@ -69,3 +78,6 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - GardeSharpMithril
+  - type: CP14Material
+    materials:
+      CP14Mithril: 10
