--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Garde/sturdy.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Garde/sturdy.yml
@@ -11,6 +11,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - GardeSturdyIron
+  - type: CP14Material
+    materials:
+      CP14Iron: 10
 
 - type: entity
   parent: CP14ModularGardeBase
@@ -26,6 +29,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - GardeSturdyGold
+  - type: CP14Material
+    materials:
+      CP14Gold: 10
 
 - type: entity
   parent: CP14ModularGardeBase
@@ -41,6 +47,9 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - GardeSturdyCopper
+  - type: CP14Material
+    materials:
+      CP14Copper: 10
 
 - type: entity
   parent: CP14ModularGardeBase
@@ -56,3 +65,6 @@
   - type: CP14ModularCraftPart
     possibleParts:
     - GardeSturdyMithril
+  - type: CP14Material
+    materials:
+      CP14Mithril: 10
