--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/general.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/general.yml
@@ -23,3 +23,28 @@
     prototypeId: CP14Mist
     sound:
       path: /Audio/Effects/smoke.ogg
+
+- type: reaction
+  id: CP14SaltProcessing
+  minTemp: 600
+  reactants:
+    Water:
+      ammount: 0.5
+    CP14GroundQuartz:
+      amount: 0.5
+  products:
+    CP14AlchemistSalt: 0.5
+  effects:
+  - !type:CP14AffectSolutionTemperature
+    addTemperature: -300
+
+- type: reaction
+  id: CP14SaltDisolving
+  minTemp: 350
+  reactants:
+    Water:
+      ammount: 0.5
+    CP14AlchemistSalt:
+      amount: 0.5
+  products:
+    CP14SaltedWater: 0.5
