--- a/Resources/Prototypes/_CP14/Entities/Objects/Materials/bars.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Materials/bars.yml
@@ -23,6 +23,9 @@
     - bar_2
     - bar_3
   - type: Material
+  #- type: CP14Material
+  #  materials:
+  #    CP14Copper: 10
 
 - type: entity
   id: CP14CopperBar5
@@ -67,6 +70,9 @@
     - bar_2
     - bar_3
   - type: Material
+  #- type: CP14Material
+  #  materials:
+  #    CP14Iron: 10
 
 - type: entity
   id: CP14IronBar5
@@ -110,6 +116,9 @@
     - bar_2
     - bar_3
   - type: Material
+  #- type: CP14Material
+  #  materials:
+  #    CP14Gold: 10
 
 - type: entity
   id: CP14GoldBar5
@@ -193,6 +202,9 @@
     - bar_2
     - bar_3
   - type: Material
+  #- type: CP14Material
+  #  materials:
+  #    CP14Mithril: 10
 
 - type: entity
   id: CP14MithrilBar5
