--- a/Resources/Prototypes/_CP14/Entities/Objects/Materials/simple.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Materials/simple.yml
@@ -371,45 +371,29 @@
   categories: [ ForkFiltered ]
   components:
   - type: Item
-    size: Tiny
+    size: Normal
   - type: Stack
     stackType: CP14FloraMaterial
     count: 1
+    baseLayer: base
+    layerStates:
+    - grass_material1
+    - grass_material2
+    - grass_material3
   - type: Sprite
     sprite: _CP14/Objects/Materials/flora.rsi
     layers:
       - state: grass_material1
-        map: ["random"]
-  - type: RandomSprite
-    available:
-      - random:
-          grass_material1: ""
-          grass_material2: ""
-          grass_material3: ""
-  - type: Tag
-    tags:
-    - CP14FireplaceFuel
-  - type: Flammable
-    fireSpread: false
-    canResistFire: false
-    alwaysCombustible: true
-    canExtinguish: true
-    cP14FireplaceFuel: 5
-    damage:
-      types:
-        Heat: 1
+        map: ["base"]
   - type: Material
-  - type: PhysicalComposition # точно ли это нужно?
-    materialComposition:
-      CP14FloraMaterial: 100
 
 - type: entity
-  id: CP14FloraMaterial2
+  id: CP14FloraMaterial10
   parent: CP14FloraMaterial1
-  suffix: 2
+  suffix: 10
   components:
     - type: Stack
-      count: 2
+      count: 10
 
 - type: entity
   id: CP14String
