--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grass_geode.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grass_geode.yml
@@ -8,6 +8,7 @@
   - CP14DemiplaneHerbals
   - CP14DemiplaneUnderground
   - CP14DemiplaneWater
+  - CP14DemiplaneAnimalsSwamp
 
 - type: dungeonConfig
   id: CP14DemiplaneSwampGeode
