--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/tags.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/tags.yml
@@ -8,6 +8,9 @@
   id: CP14DemiplanePeacefulAnimals
 
 - type: Tag
+  id: CP14DemiplaneAnimalsSwamp
+
+- type: Tag
   id: CP14DemiplaneHerbals
 
 # Demiplane features
