--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/meat.yml
@@ -211,3 +211,30 @@
     entries:
     - temperatureRange: 400, 500
       transformTo: CP14Ash1
+
+- type: entity
+  id: CP14FoodMeatFrogLeg
+  parent: CP14FoodMeatBase
+  name: frog leg
+  description: They say they eat it somewhere.
+  components:
+  - type: Sprite
+    sprite: _CP14/Objects/Consumable/Food/meat.rsi
+    state: frog_leg
+  - type: Item
+    size: Tiny
+    shape:
+    - 0,0,1,0
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 5
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 3
+        - ReagentId: UncookedAnimalProteins
+          Quantity: 1
+  - type: CP14TemperatureTransformation
+    entries:
+    - temperatureRange: 400, 500
+      transformTo: CP14Ash1
