--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/misc.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/misc.yml
@@ -72,6 +72,28 @@
       minGroupSize: 2
       maxGroupSize: 3
 
+- type: cp14DemiplaneModifier
+  id: Frog
+  tiers:
+    - 1
+    - 2
+  name: cp14-modifier-frogs
+  generationWeight: 0.4
+  categories:
+    Reward: 0.2
+  requiredTags:
+  - CP14DemiplaneAnimalsSwamp
+  layers:
+    - !type:OreDunGen
+      tileMask: 
+      - CP14FloorGrass
+      - CP14FloorGrassLight
+      - CP14FloorGrassTall
+      entity: CP14MobFrog
+      count: 3
+      minGroupSize: 2
+      maxGroupSize: 3
+
 # TIER 2
 
 - type: cp14DemiplaneModifier
