--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -119,6 +119,7 @@
   groups:
   - CP14GeneralSpells
   - CP14BankHead
+  - CP14BankOuterClothing
   - CP14GeneralEyes
   - CP14BankShirt
   - CP14BankPants
