--- a/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/role_loadouts.yml
@@ -108,6 +108,7 @@
   - CP14CommandantHead
   - CP14GeneralEyes
   - CP14CommandantCloak
+  - CP14BankOuterClothing
   - CP14BankShirt
   - CP14BankPants
   - CP14BankShoes
