--- a/Resources/Prototypes/_CP14/Entities/Clothing/Cloak/Roles/bank.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Cloak/Roles/bank.yml
@@ -3,10 +3,10 @@
   - CP14ClothingCloakBase
   - ClothingSlotBase
   id: CP14ClothingCloakCommandantJacket
-  name: commandant's jacket
+  name: commandant's cape
   description: the colors white and gold tell you that you're looking at a higher power.
   components:
   - type: Sprite
-    sprite: _CP14/Clothing/Cloak/Roles/Bank/commandant_jacket.rsi
+    sprite: _CP14/Clothing/Cloak/Roles/Bank/commandant_cape.rsi
   - type: Clothing
-    sprite: _CP14/Clothing/Cloak/Roles/Bank/commandant_jacket.rsi
+    sprite: _CP14/Clothing/Cloak/Roles/Bank/commandant_cape.rsi
